Generate 1.29 version
