# src/Resource/DefaultResourceTrait.php
@@ -1,0 +1,81 @@
+<?php
+
+declare(strict_types=1);
+
+/*
+ * This file has been auto generated by Jane,
+ *
+ * Do no edit it directly.
+ */
+
+namespace Docker\API\Resource;
+
+use Jane\OpenApiRuntime\Client\QueryParam;
+
+trait DefaultResourceTrait
+{
+    /**
+     * Get `stdout` and `stderr` logs from a task.
+
+     **Note**: This endpoint works only for services with the `json-file` or `journald` logging drivers.
+
+     *
+     * @param string $id         ID of the task
+     * @param array  $parameters {
+     *
+     *     @var bool $details show task context and extra details provided to logs
+     *     @var bool $follow return the logs as a stream
+
+     *     @var bool $stdout Return logs from `stdout`
+     *     @var bool $stderr Return logs from `stderr`
+     *     @var int $since Only return logs since this time, as a UNIX timestamp
+     *     @var bool $timestamps Add timestamps to every log line
+     *     @var string $tail Only return this number of log lines from the end of the logs. Specify as an integer or `all` to output all log lines.
+     * }
+     *
+     * @param string $fetch Fetch mode (object or response)
+     *
+     * @throws \Docker\API\Exception\TaskLogsNotFoundException
+     * @throws \Docker\API\Exception\TaskLogsInternalServerErrorException
+     * @throws \Docker\API\Exception\TaskLogsServiceUnavailableException
+     *
+     * @return \Psr\Http\Message\ResponseInterface|null
+     */
+    public function taskLogs(string $id, array $parameters = [], string $fetch = self::FETCH_OBJECT)
+    {
+        $queryParam = new QueryParam($this->streamFactory);
+        $queryParam->addQueryParameter('details', false, ['bool'], false);
+        $queryParam->addQueryParameter('follow', false, ['bool'], false);
+        $queryParam->addQueryParameter('stdout', false, ['bool'], false);
+        $queryParam->addQueryParameter('stderr', false, ['bool'], false);
+        $queryParam->addQueryParameter('since', false, ['int'], 0);
+        $queryParam->addQueryParameter('timestamps', false, ['bool'], false);
+        $queryParam->addQueryParameter('tail', false, ['string'], 'all');
+        $url = '/tasks/{id}/logs';
+        $url = str_replace('{id}', urlencode($id), $url);
+        $url = $url . ('?' . $queryParam->buildQueryString($parameters));
+        $headers = array_merge(['Accept' => ['application/json']], $queryParam->buildHeaders($parameters));
+        $body = $queryParam->buildFormDataString($parameters);
+        $request = $this->messageFactory->createRequest('GET', $url, $headers, $body);
+        $response = $this->httpClient->sendRequest($request);
+        if (self::FETCH_OBJECT === $fetch) {
+            if (101 === $response->getStatusCode()) {
+                return json_decode((string) $response->getBody());
+            }
+            if (200 === $response->getStatusCode()) {
+                return json_decode((string) $response->getBody());
+            }
+            if (404 === $response->getStatusCode()) {
+                throw new \Docker\API\Exception\TaskLogsNotFoundException($this->serializer->deserialize((string) $response->getBody(), 'Docker\\API\\Model\\ErrorResponse', 'json'));
+            }
+            if (500 === $response->getStatusCode()) {
+                throw new \Docker\API\Exception\TaskLogsInternalServerErrorException($this->serializer->deserialize((string) $response->getBody(), 'Docker\\API\\Model\\ErrorResponse', 'json'));
+            }
+            if (503 === $response->getStatusCode()) {
+                throw new \Docker\API\Exception\TaskLogsServiceUnavailableException($this->serializer->deserialize((string) $response->getBody(), 'Docker\\API\\Model\\ErrorResponse', 'json'));
+            }
+        }
+
+        return $response;
+    }
+}
