# src/Resource/ServiceResourceTrait.php
@@ -144,8 +144,12 @@ trait ServiceResourceTrait
 
     /**
      * @param string $id         ID or name of service
-     * @param array  $parameters List of parameters
-     * @param string $fetch      Fetch mode (object or response)
+     * @param array  $parameters {
+     *
+     *     @var bool $insertDefaults Fill empty fields with default values.
+     * }
+     *
+     * @param string $fetch Fetch mode (object or response)
      *
      * @throws \Docker\API\Exception\ServiceInspectNotFoundException
      * @throws \Docker\API\Exception\ServiceInspectInternalServerErrorException
@@ -156,6 +160,7 @@ trait ServiceResourceTrait
     public function serviceInspect(string $id, array $parameters = [], string $fetch = self::FETCH_OBJECT)
     {
         $queryParam = new QueryParam($this->streamFactory);
+        $queryParam->addQueryParameter('insertDefaults', false, ['bool'], false);
         $url = '/services/{id}';
         $url = str_replace('{id}', urlencode($id), $url);
         $url = $url . ('?' . $queryParam->buildQueryString($parameters));
@@ -242,10 +247,10 @@ trait ServiceResourceTrait
      **Note**: This endpoint works only for services with the `json-file` or `journald` logging drivers.
 
      *
-     * @param string $id         ID or name of the container
+     * @param string $id         ID or name of the service
      * @param array  $parameters {
      *
-     *     @var bool $details show extra details provided to logs
+     *     @var bool $details show service context and extra details provided to logs
      *     @var bool $follow return the logs as a stream
 
      *     @var bool $stdout Return logs from `stdout`
